tests/NormalTests/paczka1/small_fuzzy/97718515.err
Error in line 9: TjD A75 73,0
Error in line 14: TjD A557 81,6
